--- a/templates/logstash_rabbit_input.erb
+++ b/templates/logstash_rabbit_input.erb
@@ -5,7 +5,7 @@
     exclusive => false
     host => "<%= @ipaddress %>"
     user => 'logstash'
-    password => '<%= @cluster_name %>'
+    password => '<%= @rabbit_logstash_password %>'
     queue => "logstash-queue"
     tags => ['from_rabbitmq']
     type => "logging"
