some stuff about notify

--- a/templates/logstash_output_es.erb
+++ b/templates/logstash_output_es.erb
@@ -1,1 +1,6 @@
-output { elasticsearch { cluster => <%= @cluster_name %> } }
+}
+output {
+  elasticsearch {
+    cluster => <%= "@cluster_name" %>
+  }
+}
