--- a/templates/logstash_rabbit_input.erb
+++ b/templates/logstash_rabbit_input.erb
@@ -7,7 +7,6 @@
     user => 'logstash'
     password => '<%= @rabbit_logstash_password %>'
     queue => "logstash-queue"
-    tags => ['from_rabbitmq']
+    tags => ['rabbitMQ-<%= @fqdn %>']
     type => "logging"
   }
-
