change to durable

--- a/templates/logstash_rabbit_input.erb
+++ b/templates/logstash_rabbit_input.erb
@@ -1,6 +1,6 @@
   rabbitmq {
     auto_delete => false
-    durable => false
+    durable => true
     exchange => "logstash-exchange"
     exclusive => false
     host => "<%= @ipaddress %>"
