some nice stuff

--- a/templates/logstash_redis_input.erb
+++ b/templates/logstash_redis_input.erb
@@ -1,5 +1,5 @@
   redis {
-    host => <%= ipaddress %>
+    host => <%= @ipaddress %>
     key => 'logstash:redis'
     data_type => 'list'
     tags => ['from_'<%= @hostname %>,'redis']
