edit stome stuff

--- a/templates/logstash_redis_input.erb
+++ b/templates/logstash_redis_input.erb
@@ -2,6 +2,6 @@
     host => '<%= @ipaddress %>'
     key => 'logstash:redis'
     data_type => 'list'
-    tags => ['from_'<%= @hostname %>,'redis']
+    tags => ['from_<%= @hostname %>','redis']
     password => '<%= @redis_password %>'
   }
