adding centos support

--- a/templates/collectd_simple.erb
+++ b/templates/collectd_simple.erb
@@ -8,7 +8,7 @@ LoadPlugin load
 LoadPlugin memory
 LoadPlugin disk
 <Plugin disk>
-	Disks "<%= @collectd_disks %>"
+	Disk "<%= @collectd_disks %>"
 </Plugin>
 LoadPlugin interface
 LoadPlugin df
