--- a/templates/collectd-client.conf.erb
+++ b/templates/collectd-client.conf.erb
@@ -1,18 +1,10 @@
-# Config file for collectd(1).
-#
-# Some plugins need additional configuration and are disabled by default.
-# Please read collectd.conf(5) for details.
-#
-# You should also read /usr/share/doc/collectd-core/README.Debian.plugins
-# before enabling any more plugins.
-
-Hostname "<%= @hostname %>"
-#FQDNLookup true
+#Hostname "<%= @hostname %>"
+FQDNLookup true
 #BaseDir "/var/lib/collectd"
 #PluginDir "/usr/lib/collectd"
 #TypesDB "/usr/share/collectd/types.db" "/etc/collectd/my_types.db"
-#Interval 10
-#ReadThreads 5
+Interval 10
+ReadThreads 5
 
 LoadPlugin syslog
 
@@ -24,6 +16,9 @@ LoadPlugin interface
 LoadPlugin load
 LoadPlugin memory
 LoadPlugin network
+LoadPlugin df
+LoadPlugin disk
+LoadPlugin uptime
 
 <Plugin interface>
     Interface "eth0"
