added suricata log reflow in output

--- a/templates/logstash_output_es.erb
+++ b/templates/logstash_output_es.erb
@@ -1,6 +1,13 @@
 }
 output {
-  elasticsearch {
-    cluster => <%= "@cluster_name" %>
+  if "suricata" in [tags] {
+    elasticsearch {
+      cluster => <%= "@cluster_name" %>
+      index   => "logstash-suricata-%{+YYYY.MM.dd}"
+    }
+  } else {
+    elasticsearch {
+      cluster => <%= "@cluster_name" %>
+    }
   }
 }
